crates/pyfmt_python_formatter/src/comments/snapshots/pyfmt_python_formatter__comments__tests__while_trailing_else_end_of_line_comment.snap
---
source: crates/pyfmt_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: StmtWhile,
        range: 0..54,
        source: `while True:⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# trailing comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
}
